# apps/server/internal/api/controller/forms.controller.go
@@ -15,5 +15,7 @@ func RegisterFormsController(rg *gin.RouterGroup) {
 	{
 		forms.POST("/", formHandler.CreateForm)
 		forms.POST("/fields", formHandler.CreateFormFields)
+		forms.GET("/", formHandler.GetForms)
+		forms.GET("/:formID", formHandler.GetSingleForm)
 	}
 }
