# apps/server/internal/dto/form_fields.dto.go
@@ -3,6 +3,7 @@ package dto
 import (
 	"database/sql"
 
+	"github.com/giridhar-m-a/custom_form_app/internal/db/sqlc"
 	"github.com/google/uuid"
 )
 
@@ -13,7 +14,7 @@ type CreateFormFieldsDTO struct {
 
 type CreateFormFieldDTO struct {
 	FieldLabel string                     `json:"fieldLabel" validate:"required"`
-	FieldType  string                     `json:"fieldType" validate:"required"`
+	FieldType  sqlc.FormFieldType         `json:"fieldType" validate:"required"`
 	IsRequired bool                       `json:"isRequired"`
 	Ordering   int                        `json:"ordering" validate:"required"`
 	Options    []CreateFormFieldOptionDTO `json:"options" validate:"dive"`
@@ -29,7 +30,7 @@ type CreatedFormFieldDTO struct {
 	FormId     uuid.UUID                   `json:"formId"`
 	FieldID    uuid.UUID                   `json:"fieldId"`
 	FieldLabel string                      `json:"fieldLabel"`
-	FieldType  string                      `json:"fieldType"`
+	FieldType  sqlc.FormFieldType          `json:"fieldType"`
 	IsRequired sql.NullBool                `json:"isRequired"`
 	Ordering   int32                       `json:"ordering"`
 	Options    []CreatedFormFieldOptionDTO `json:"options"`
