# apps/server/internal/dto/query.dto.go
@@ -1,0 +1,8 @@
+package dto
+
+type Query struct {
+	Page   int    `form:"page"`
+	Limit  int    `form:"limit"`
+	Search string `form:"search"`
+	Sort   string `form:"sort"`
+}
